rust/macros/tests/ui/fail/conflicting_msg_payload.stderr
error: message 'Msg' is used with conflicting payload types in the same protocol
 --> tests/ui/fail/conflicting_msg_payload.rs:3:1
  |
3 | / choreography! {
4 | |     protocol Bad {
5 | |         roles A, B;
6 | |         A -> B: Msg;
... |
9 | | }
  | |_^
  |
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)
